--- a/styles/design.css
+++ b/styles/design.css
@@ -257,18 +257,6 @@ main h3 {
   margin-bottom: 30px;
 }
 
-/*.focus-button {
-  display: inline-block;
-  background-color: #4E47FF;
-  color: white;
-  padding: 12px 24px;
-  border-radius: 8px;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 16px;
-  margin-bottom: 40px;
-  transition: background-color 0.3s ease;
-}*/
 
 .focus-button:hover {
   background-color: #372eff;
@@ -279,4 +267,37 @@ main h3 {
   height: auto;
   border-radius: 28px;
   margin-top: 20px;
+}
+.form-part{
+    padding: 50px 300px;
+    display: flex;
+    gap: 40px;
+    justify-content: space-between;
+    
+}
+.form-text{
+    width: 528px;
+    height:232px;
+    font-weight: bold;
+    font-size: 50px;
+    color: #000000;
+    margin-top: 65px;
+}
+input[type="text"],textarea{
+
+    height:45px;
+    width: 100%;
+    padding: 32px 20px;
+    background-color: #FFFFFF;
+    display: block;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-bottom: 17px;
+    
+}
+.last-btn{
+    width: 100%;
+}
+textarea{
+    height:100px;
 }
